# wasmagent-train-replay

./: .env.example  BOT_STATE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  _check_pip.py  _run_all.py  _run_test.py  _run_tests.py  check_env.py  check_structure.py  pyproject.toml  requirements.txt  run_check.sh  run_pip.sh  test_runner.py
.claude-bot/: verify.yml
.github/workflows/: ci.yml
dev/: null
docs/: 15-milestones.md  agent-integration.md  anomaly-guide.md  architecture.md  cli-reference.md  export-command-design.md  follow-up-issues.md  integration.md  positioning.md  prometheus-setup.md  protocol.md  strategy.md
examples/: fault_injection_demo.py  generate_sample_trace.py
scripts/: check_structure.py
srv/claude-bot/worktrees/WasmAgent_wasmagent-train-replay/: check_env.py  explore.sh  run_pip.sh
tests/: test_agent_reasoner.py  test_agent_schema.py  test_anomaly.py  test_anomaly_detector.py  test_builder.py  test_cli.py  test_cli_replay.py  test_collision.py  test_config.py  test_escalation.py  test_evidence_chain.py  test_flight_recorder_security.py  test_gloo.py  test_graph_base.py  test_imports.py  test_integration.py  test_modes.py  test_mtia.py  test_ops.py  test_profile.py  test_prov_graph.py  test_recording.py  test_replay.py  test_safemode.py  test_serialization.py  test_signing.py
tmp/: check-paths.sh  check_git.sh  check_python.sh  read_status.sh  run_all.sh  run_check.sh  run_checks.sh  run_tests.sh
train_replay/: __init__.py  agent_reasoner.py  config.py
train_replay/agent/: __init__.py  schema.py  tools.py
train_replay/anomaly/: __init__.py  detector.py  profile.py
train_replay/cli/: admin.py  main.py  safemode.py
train_replay/collector/: flight_recorder.py  gloo.py  mtia.py  profiler_hook.py
train_replay/graph/: __init__.py  base.py  builder.py  collision.py  evidence_chain.py  ops.py  prov_graph.py
train_replay/recording/: escalation.py  evidence.py  modes.py  recorder.py
train_replay/replay/: replayer.py
train_replay/signing/: signer.py
