[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "wasmagent-train-replay"
version     = "0.1.0"
description = "Causal evidence layer for distributed GPU training — cross-rank provenance graph and deterministic replay"
readme      = "README.md"
license     = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords    = ["distributed-training", "pytorch", "nccl", "provenance", "causal-graph", "replay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2.0",
    "cryptography>=42.0",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev  = ["pytest>=8", "pytest-cov", "ruff", "mypy"]
otel = ["opentelemetry-sdk>=1.24", "opentelemetry-exporter-otlp-proto-grpc>=1.24"]
viz  = ["matplotlib>=3.8", "plotly>=5.20"]

[project.scripts]
train-replay = "train_replay.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["train_replay"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

# Some CI/sandbox environments ship a broken partial PEP-561 namespace stub for
# `google` (the types-google-cloud-ndb package installs google-stubs/ with no
# top-level google/ package). mypy aborts with
#   Cannot read file '.../dist-packages//google': No such file or directory
# before it checks any source. This package never imports google, so skip
# following into that namespace and let `mypy train_replay` proceed.
[[tool.mypy.overrides]]
module = ["google", "google.*"]
follow_imports = "skip"
ignore_missing_imports = true

# torch re-exports numpy types and mypy follows the import chain
# torch → numpy.  numpy 2.5 ships PEP-695 type statements (Python 3.12+) in its
# bundled .pyi, which abort mypy when python_version < "3.12".  Tell mypy not to
# follow imports out of torch so numpy stubs are never parsed.
[[tool.mypy.overrides]]
module = ["torch", "torch.*"]
follow_imports = "skip"
ignore_missing_imports = true
